Create images floder

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
 
-    <img src="luqman.jpg" alt="This is luqman" width="300" height="300">
+    <img src="./images/luqman.jpg" alt="This is luqman" width="300" height="300">
 
     <h1>Muhammad Luqman</h1>
 
