Update assignment one

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <ul>
         <li>W1D1 - This is homepage</li>
-        <li><p>W1D2 - About me: <a href="index2">Go to</a></p></li>
+        <li>W1D2 - About me: <a href="index2">Inprogress</a></li>
         <li>W1D3 - Recipe</li>
         <li>W1D4 - Movie Review</li>
         <li>W1D5 - MP3 Library</li>
