--- a/index.html
+++ b/index.html
@@ -30,6 +30,11 @@
 
     </ul>
 
+
 </body>
+
+<footer>
+    <a href="http://validator.w3.org/check/referer"> <img src="http://mumstudents.org/cs472/2014-09/images/w3c-html.png" alt="html validator" /></a>
+</footer>
 
 </html>
