--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
 
 </head>
 
+<header>
+
+</header>
+
 <body>
 
     <img src="./images/luqman.jpg" alt="This is luqman" width="300" height="300">
