--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 </body>
 
 <footer>
-    <a href="http://validator.w3.org/check/referer"> <img src="http://mumstudents.org/cs472/2014-09/images/w3c-html.png" alt="html validator" /></a>
+    <a href="http://validator.w3.org/check/referer"> <img src="./images/w3c-html.png" alt="html validator" /></a>
 </footer>
 
 </html>
