--- a/index.html
+++ b/index.html
@@ -38,7 +38,12 @@
 </body>
 
 <footer>
-    <a href="http://validator.w3.org/check/referer"> <img src="./images/w3c-html.png" alt="html validator" /></a>
+    <!-- <a href="http://validator.w3.org/check/referer"> <img src="./images/w3c-html.png" alt="html validator" /></a> -->
+    <p>
+        <a href="http://validator.w3.org/check?uri=referer" onclick="this.href='http://validator.w3.org/check?uri=' + 
+      document.URL"><img src="http://www.w3.org/Icons/valid-xhtml10" alt="Valid XHTML 1.0!" height="31" width="88" /></a>
+    </p>
+
 </footer>
 
 </html>
