--- a/index.html
+++ b/index.html
@@ -1,46 +1,118 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<title>Lab 1</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Roboto'>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<style>
+    html,
+    body,
+    h1,
+    h2,
+    h3,
+    h4,
+    h5,
+    h6 {
+        font-family: "Roboto", sans-serif
+    }
+</style>
 
-<head>
-    <meta charset="utf-8">
-    <title>Muhammad Luqman</title>
+<body class="w3-light-grey">
 
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <style>
-        img {
-            border-radius: 50%;
-        }
-    </style>
+    <!-- Page Container -->
+    <div class="w3-content w3-margin-top" style="max-width:1400px;">
 
-</head>
+        <!-- The Grid -->
+        <div class="w3-row-padding">
 
-<body>
+            <!-- Left Column -->
+            <div class="w3-third">
 
-    <header>
+                <div class="w3-white w3-text-grey w3-card-4">
+                    <div class="w3-display-container">
+                        <img src="./images/luqman.jpg" style="width:100%" alt="Avatar">
+                        <div class="w3-display-bottomleft w3-container w3-text-black">
+                            <h2>Muhamamd Luqman</h2>
+                        </div>
 
-    </header>
-    <img src="./images/luqman.jpg" alt="This is luqman" width="300" height="300">
+                    </div>
+                    <div class="w3-container">
+                        <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-teal"></i>Master's Computer Science</p>
+                        <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-teal"></i>Maharishi Internation University, Fairfield USA</p>
+                        <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-teal"></i>mluqman@miu.edu</p>
+                        <p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-teal"></i>+1(929) 448-8600</p>
+                        <p><i class="fa fa-linkedin fa-fw w3-margin-right w3-large w3-text-teal"></i>https://www.linkedin.com/in/muhammadluqman316</p>
+                        <br>
+                        <br>
+                        <hr>
+                    </div>
+                </div>
 
-    <h1>Muhammad Luqman</h1>
+                <!-- End Left Column -->
+            </div>
 
-    <ul>
-        <li>W1D1 - This is homepage</li>
-        <li>W1D2 - About me: <a href="index2">Inprogress</a></li>
-        <li>W1D3 - Recipe</li>
-        <li>W1D4 - Movie Review</li>
-        <li>W1D5 - MP3 Library</li>
-        <li>W1D6 - Movie Review PHP</li>
+            <!-- Right Column -->
+            <div class="w3-twothird">
 
-    </ul>
+                <div class="w3-container w3-card w3-white w3-margin-bottom">
+                    <h2 class="w3-text-grey w3-padding-12"><i class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>CS472-2020-04D-05C | Web Application Programming</h2>
+                    <hr>
 
-    <footer>
-        <!-- <a href="http://validator.w3.org/check/referer"> <img src="./images/w3c-html.png" alt="html validator" /></a> -->
-        <p>
-            <a href="http://validator.w3.org/check?uri=referer" onclick="this.href='http://validator.w3.org/check?uri=' + 
-          document.URL"><img src="http://www.w3.org/Icons/valid-xhtml10" alt="Valid XHTML 1.0!" height="31" width="88" /></a>
-        </p>
+                    <div class="w3-container">
+                        <h5 class="w3-opacity"><b>Lab Assignments</b></h5>
+                        <ul style="list-style-type:circle;">
+                            <li> Lab 1 </li>
+                            <li> Lab 2</a>
+                            </li>
+                            <ul style="list-style-type:circle;">
+                                <li> <a href="aboutme.html">About Me</a></li>
+                            </ul>
+                            <li>Lab 3</li>
+                            <li>Lab 4</li>
+                            <li>Lab 5</li>
+                            <li>Lab 6</li>
+                            <li>Lab 7</li>
+                            <li>Lab 8</li>
+                            <li>Lab 9</li>
+                            <li>Lab 10</li>
+                        </ul>
+                        <br>
 
-    </footer>
+                        <i class="w3-hover-opacity">
+            <a href="https://validator.w3.org/check/referer">
+              <img src="./images/w3chtmlvalidlogo.png" alt="W3C HTML Validator" height="50">
+            </a>
+            </i>
+                        <i> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;   &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; </i>
+                        <i class="w3-hover-opacity">
+            <a href="https://jigsaw.w3.org/css-validator/check/referer">
+              <img src="./images/w3ccssvalidlogo.png" alt="W3C HTML Validator" height="50">
+            </a>
+           </i>
+
+                        <br>
+                        <hr>
+                    </div>
+
+
+                </div>
+
+
+                <!-- End Right Column -->
+            </div>
+
+            <!-- End Grid -->
+        </div>
+
+        <!-- End Page Container -->
+    </div>
+
+
+
+
+
 </body>
 
 </html>
