Remove error in index file

--- a/index.html
+++ b/index.html
@@ -64,9 +64,8 @@
                         <h5 class="w3-opacity"><b>Lab Assignments</b></h5>
                         <ul style="list-style-type:circle;">
                             <li> Lab 1 </li>
-                            <li> Lab 2</a>
-                            </li>
-                            <ul style="list-style-type:circle;">
+                            <li> Lab 2</li>
+                            <ul style="list-style-type:circle">
                                 <li> <a href="aboutme.html">About Me</a></li>
                             </ul>
                             <li>Lab 3</li>
