--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                         <ul style="list-style-type:circle;">
                             <li> Lab 1 </li>
                             <li> Lab 2</li>
-                            <ul class="inside" style="list-style-type:circle">
+                            <ul class="inside">
                                 <li> <a href="aboutme.html">About Me</a></li>
                             </ul>
                             <li>Lab 3</li>
