--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
                     <div class="w3-container">
                         <h5 class="w3-opacity"><b>Lab Assignments</b></h5>
-                        <ul style="list-style-type:circle;">
+                        <ul class="menu">
                             <li> Lab 1 </li>
                             <li> Lab 2</li>
                             <ul class="inside">
