--- a/index.html
+++ b/index.html
@@ -62,12 +62,17 @@
 
                     <div class="w3-container">
                         <h5 class="w3-opacity"><b>Lab Assignments</b></h5>
+
                         <ul class="menu">
                             <li> Lab 1 </li>
                             <li> Lab 2</li>
-                            <ul class="inside">
-                                <li> <a href="aboutme.html">About Me</a></li>
-                            </ul>
+                            <li>
+                                <ul class="inside">
+                                    <li> <a href="aboutme.html">About Me</a></li>
+                                    <li> <a href="">Inprogress</a></li>
+
+                                </ul>
+                            </li>
                             <li>Lab 3</li>
                             <li>Lab 4</li>
                             <li>Lab 5</li>
