Lab 2 -Movie Review

--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
                             <li>
                                 <ul class="inside">
                                     <li> <a href="aboutme.html">About Me</a></li>
-                                    <li> <a href="">Inprogress</a></li>
-
+                                    <li> <a href="CSSPractice/index.html">CSS Practice</a></li>
+                                    <li> <a href="MovieReview/tmnt.html">MovieReview </a></li>
                                 </ul>
                             </li>
                             <li>Lab 3</li>
