--- a/index.html
+++ b/index.html
@@ -74,6 +74,9 @@
                                 </ul>
                             </li>
                             <li>Lab 3</li>
+                            <ul class="inside">
+                                <li> <a href="Tasklist/tasklist.html">Task List HTML Page</a></li>
+                            </ul>
                             <li>Lab 4</li>
                             <li>Lab 5</li>
                             <li>Lab 6</li>
