--- a/index.html
+++ b/index.html
@@ -65,18 +65,22 @@
 
                         <ul class="menu">
                             <li> Lab 1 </li>
-                            <li> Lab 2</li>
-                            <li>
+                            <li> Lab 2
+
                                 <ul class="inside">
                                     <li> <a href="aboutme.html">About Me</a></li>
                                     <li> <a href="CSSPractice/index.html">CSS Practice</a></li>
                                     <li> <a href="MovieReview/tmnt.html">MovieReview </a></li>
                                 </ul>
+
                             </li>
-                            <li>Lab 3</li>
-                            <ul class="inside">
-                                <li> <a href="Tasklist/tasklist.html">Task List HTML Page</a></li>
-                            </ul>
+                            <li>Lab 3
+
+                                <ul class="inside">
+                                    <li> <a href="Tasklist/tasklist.html">Task List HTML Page</a></li>
+                                </ul>
+
+                            </li>
                             <li>Lab 4</li>
                             <li>Lab 5</li>
                             <li>Lab 6</li>
