Update title for Task List HTML Page

--- a/Tasklist/tasklist.html
+++ b/Tasklist/tasklist.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" type="text/css" href="../css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="../css/style2.css">
 
-    <title>Assignment</title>
+    <title>Task List HTML Page</title>
 </head>
 
 <body>
