Updaet lab name

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                                 </ul>
 
                             </li>
-                            <li>Lab 3
+                            <li>Lesson 4: CSS for Page Layout (Week 2)
 
                                 <ul class="inside">
                                     <li> <a href="Tasklist/tasklist.html">Task List HTML Page</a></li>
