Lesson 7: (Objects, Modules, Inheritance) ASCII Animation

--- a/index.html
+++ b/index.html
@@ -86,9 +86,22 @@
                                     <li> <a href="BasicJavaScript/BasicJavaScript.html">Basic JavaScript</a></li>
                                 </ul>
                             </li>
-                            <li>Lab 5</li>
-                            <li>Lab 6</li>
-                            <li>Lab 7</li>
+
+                            <li>Lesson 6: Scope, closures and encapsulation
+                                <ul class="inside">
+                                    <li> <a href="ScopeClosuresEncapsulation/ScopeClosuresEncapsulation.html">Scope, closures and encapsulation</a></li>
+                                </ul>
+
+                            </li>
+
+                            <li>Lesson 7: (Objects, Modules, Inheritance) ASCII Animation
+                                <ul class="inside">
+                                    <li> <a href="ReImplementLab5/ReImplementLab5.html">Re-implement the Lab 5</a></li>
+                                    <li> <a href="ASCIImation_files/ASCIImation.html">Implement the ASCIIanimation.</a></li>
+                                </ul>
+
+                            </li>
+
                             <li>Lab 8</li>
                             <li>Lab 9</li>
                             <li>Lab 10</li>
