LECTURE9: DOM, JQUERY (Maze)

--- a/index.html
+++ b/index.html
@@ -102,7 +102,13 @@
 
                             </li>
 
-                            <li>Lab 8</li>
+                            <li>LECTURE9: DOM, JQUERY (Maze)
+                                <ul class="inside">
+                                    <li> <a href="MazeGame/Maze.html">Maze Game</a></li>
+                                </ul>
+
+                            </li>
+
                             <li>Lab 9</li>
                             <li>Lab 10</li>
                         </ul>
