--- a/index.html
+++ b/index.html
@@ -65,6 +65,9 @@
 
                         <ul class="menu">
                             <li> Lab 1 </li>
+                            <li> Lab 2 </li>
+                            <li> Lab 3 </li>
+                            <!-- 
                             <li> Lab 2
 
                                 <ul class="inside">
@@ -110,7 +113,7 @@
                             </li>
 
                             <li>Lab 9</li>
-                            <li>Lab 10</li>
+                            <li>Lab 10</li> -->
                         </ul>
                         <br>
 
@@ -121,10 +124,10 @@
             </i>
                         <i> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;   &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; </i>
                         <i class="w3-hover-opacity">
-            <a href="https://jigsaw.w3.org/css-validator/check/referer">
+            <!-- <a href="https://jigsaw.w3.org/css-validator/check/referer">
               <img src="./images/w3ccssvalidlogo.png" alt="W3C HTML Validator" height="50">
             </a>
-           </i>
+           </i> -->
 
                         <br>
                         <hr>
